--- a/overlay/packages/apps/Settings/res/values/config.xml
+++ b/overlay/packages/apps/Settings/res/values/config.xml
@@ -20,4 +20,13 @@
          3 = right side
     -->
     <integer name="config_fingerprintSensorLocation">3</integer>
+
+  <!-- Device specific doze package -->
+  <string name="config_customDozePackage">org.lineageos.settings.doze/org.lineageos.settings.doze.DozeSettingsActivity</string>
+
+  <!-- Battery Health -->
+  <string name="config_batDesCap">/sys/class/power_supply/bms/charge_full_design</string>
+  <string name="config_batCurCap">/sys/class/power_supply/bms/charge_counter</string>
+  <string name="config_batChargeCycle">/sys/class/power_supply/bms/cycle_count</string>
+
 </resources>
